--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.7.0",
     "node-sass": "^4.11.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "16.8.2",
+    "react-dom": "16.8.2",
     "react-scripts": "2.1.5"
   },
   "scripts": {
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "babel-loader": "^8.0.4"
+    "babel-loader": "^8.0.4",
+    "jest": "23.6.0"
   }
 }
